resources/tests/invalid_syntax/fn_decl_main.ct
//`Function 'main' should be declared as 'fn main()->i64'!
//1
fn main()->void {}